--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.27.1",
     "axios": "^0.19.0",
     "axios-mock-adapter": "^1.17.0",
     "body-parser": "^1.19.0",
@@ -27,6 +28,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "log-gcb": "^1.1.10",
     "mockery": "^2.1.0",
     "mysql2": "^2.1.0",
