--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "pretest": "cross-env NODE_ENV=test sequelize db:migrate",
     "test": "jest --forceExit --bail",
     "posttest": "cross-env NODE_ENV=test sequelize db:migrate:undo:all ",
-    "start": " pm2-runtime start ./node_modules/sucrase/bin/sucrase-node --name api -- ./src/server.ts -i --watch "
+    "start": "npx tsc && node dist/src/server.js"
   },
   "author": "",
   "license": "ISC",
