ajustando arquivos e typescript para hospedar no heroku

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "description": "",
   "main": "server.js",
+  "outDir": "./dist",
+  "rootDir": "./",
   "husky": {
     "hooks": {
       "pre-commit": "yarn version --prepatch --no-git-tag-version && git add ."
