--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pg": "^7.17.0",
     "request-promise": "^4.2.5",
     "sequelize": "^5.21.3",
+    "ts-node": "^9.1.1",
     "typescript": "^3.7.4",
     "uniqid": "^5.2.0",
     "youch": "^2.0.10",
