--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "i": "^0.3.6",
     "jsonwebtoken": "^8.5.1",
     "log-gcb": "^1.1.10",
     "mockery": "^2.1.0",
     "mysql2": "^2.1.0",
+    "npm": "^7.6.0",
     "passport": "^0.4.1",
     "passport-http-bearer": "^1.0.1",
     "pg": "^7.17.0",
