adicionando readme e database

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-NOME_SERVICO = back-challenge
-KEY_SERVICO = 
+NOME_SERVICO = cursos-beta-back
+KEY = cursos-beta-back-key
 PORT=4020
 NODE_ENV=develop
 
@@ -7,4 +7,4 @@ DB_DIALECT=mysql
 DB_HOST=localhost
 DB_USER=root
 DB_PASS=
-DB_NAME=db_challenge
+DB_NAME=cursos_db
